# Live

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zl/live/: App.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
glnative/: build.gradle
glnative/src/main/: AndroidManifest.xml
glnative/src/main/cpp/: CMakeLists.txt  native-lib.cpp
glnative/src/main/cpp/egl/: EglHelper.cpp  EglHelper.h  EglWrapper.cpp  EglWrapper.h
glnative/src/main/cpp/include/: android_log.h
glnative/src/main/cpp/render/: BaseRender.cpp  TextureRender.cpp  TriangleRender.cpp
glnative/src/main/cpp/render/include/: BaseRender.h  SquareRender.h  TextureRender.h  TriangleRender.h
glnative/src/main/cpp/utils/: BlockQueue.cpp
glnative/src/main/cpp/utils/include/: BlockQueue.h
glnative/src/main/java/com/zl/glnative/: GLActivity.kt  GLRenderer.kt  GLSurfaceCallback.kt  GLTextureListener.kt  Utils.kt
glnative/src/main/java/com/zl/glnative/system/: Utils.kt  (+2 more)
glnative/src/main/res/layout/: activity_gl.xml
gradle/wrapper/: gradle-wrapper.properties
livepush/: build.gradle
livepush/src/main/: AndroidManifest.xml
livepush/src/main/java/com/zl/livepush/: PushActivity.kt
livepush/src/main/res/layout/: activity_push.xml
livepush/src/main/res/values/: strings.xml
mediacodec/: build.gradle
mediacodec/src/main/: AndroidManifest.xml
mediacodec/src/main/java/com/zl/mediacodec/: Mp4Activity.kt
mediacodec/src/main/res/layout/: activity_mp4.xml
(+4 files in other folders)
